--- a/dev/index.html
+++ b/dev/index.html
@@ -10,9 +10,6 @@
 		</style>
 	</head>
     <body>
-        <script src="out/goog/base.js" type="text/javascript"></script>
-        <script src="pixi.dev.js" type="text/javascript"></script>
-        <script src="pi.js" type="text/javascript"></script>
-        <script type="text/javascript">goog.require("pi.dev");</script>
+        <script src="main.js" type="text/javascript"></script>
     </body>
 </html>
